--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Enhanced Automated Teller Machine",
   "main": "index.jsx",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "html-webpack-plugin": "^3.0.4",
+    "mongodb": "^3.1.0-beta4",
     "path": "^0.12.7",
     "react": "16.2.0",
     "react-dom": "16.2.0"
@@ -12,7 +14,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --progress --colors --mode development --config ./webpack.config.js",
-    "build": "webpack --progress --colors --config ./webpack.config.js"
+    "build": "webpack --progress --colors --config ./webpack.config.js",
+    "server": "node server/main.js"
   },
   "repository": {
     "type": "git",
