--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "html-webpack-plugin": "^3.0.4",
     "mongodb": "^3.1.0-beta4",
     "path": "^0.12.7",
+    "query-string": "^6.1.0",
     "react": "16.2.0",
     "react-dom": "16.2.0"
   },
